# indie_studio

./: .gitignore  CMakeLists.txt  README.md  test.cpp
assets/: assets.hpp  find_asset.cpp
cmake/: FindIrrlicht.cmake
src/: main.cpp
src/Assets/: Assets.cpp  Assets.hpp
src/Bomb/: Bomb.cpp  Bomb.hpp
src/Breakable/: Breakable.cpp  Breakable.hpp
src/Core/: Core.cpp  Core.hpp
src/Entity/: AEntity.cpp  AEntity.hpp  Entity.hpp  IEntity.hpp
src/Event/: Event.hpp
src/Exception/: MyException.cpp  MyException.hpp
src/Explosion/: Explosion.cpp  Explosion.hpp
src/Irrlicht/: Irrlicht.cpp  Irrlicht.hpp  Irrlitch.cpp  Irrlitch.hpp
src/Map/: GameMap.cpp  GameMap.hpp  Map.cpp  Map.hpp
src/Menu/: Menu.cpp  Menu.hpp  MenuEvtManager.cpp  MenuEvtManager.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp
src/Player/: Player.cpp  Player.hpp
src/PlayerEvent/: PlayerEvent.cpp  PlayerEvent.hpp
src/PowerUp/: BombUp.hpp  BompUp.cpp  FireUp.cpp  FireUp.hpp  IPowerUp.hpp  SpeedUp.cpp  SpeedUp.hpp  WallPass.cpp  WallPass.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/SceneManager/: SceneManager.cpp  SceneManager.hpp
src/Wall/: Wall.cpp
src/bomb/: Bomb.cpp  Bomb.hpp
src/wall/: Wall.cpp  Wall.hpp
